Enhance .slugignore with additional entries
Updated .slugignore to include additional files and directories to ignore, enhancing the ignore list for better project management.

--- a/.slugignore
+++ b/.slugignore
@@ -1,21 +1,58 @@
-# Ignorar caches y basura de pnpm/npm
-node_modules/.cache
-node_modules/.pnpm-store
-.pnpm-store
-.cache
-.git
-.gitignore
+# Documentación
 *.md
-*.log
+README*
+LICENSE
+CHANGELOG.md
+docs/
+.github/
+
+# Tests
+test/
 tests/
 __tests__/
+*.test.ts
+*.test.js
+*.spec.ts
+*.spec.js
+vitest.*.ts
 coverage/
-.env
-.env.example
-dist/  # si hay builds viejos
-tmp/
-logs/
-# Si hay modelos o assets grandes (poco probable en OpenClaw base)
-models/
+
+# Dev config
+.vscode/
+.idea/
+tsconfig.json
+.prettierrc*
+.eslintrc*
+
+# Source (ya compilado en dist/)
+src/
+
+# Apps de escritorio
+apps/macos/
+apps/ios/
+apps/android/
+Swabble/
+
+# Assets
 assets/
-public/  # si no usas web
+*.png
+*.jpg
+*.jpeg
+
+# Otros
+extensions/
+scripts/
+git-hooks/
+patches/
+docker-compose.yml
+Dockerfile*
+.dockerignore
+fly.toml
+render.yaml
+.git/
+.pnpm-store/
+node_modules/.cache/
+*.log
+*.map
+vendor/
+skills/
