Add heroku-postbuild script to package.json

--- a/package.json
+++ b/package.json
@@ -144,7 +144,9 @@
     "protocol:gen:swift": "node --import tsx scripts/protocol-gen-swift.ts",
     "protocol:check": "pnpm protocol:gen && pnpm protocol:gen:swift && git diff --exit-code -- dist/protocol.schema.json apps/macos/Sources/OpenClawProtocol/GatewayModels.swift",
     "canvas:a2ui:bundle": "bash scripts/bundle-a2ui.sh",
-    "check:loc": "node --import tsx scripts/check-ts-max-loc.ts --max 500"
+    "check:loc": "node --import tsx scripts/check-ts-max-loc.ts --max 500",
+    "heroku-postbuild": "pnpm prune --prod && rm -rf src/ tests/ docs/ assets/"
+
   },
   "keywords": [],
   "author": "",
